// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WorklistDataGrid render column header cell with ascending sort 1`] = `
<th
  aria-sort="ascending"
  className="column-header selectable"
  key="Column-0"
  role="columnheader"
  scope="col"
  style={
    Object {
      "height": "150px",
      "width": "100px",
    }
  }
  tabIndex="-1"
>
  <div
    className="header-container"
  >
    <span
      role="button"
    >
       Vitals
    </span>
    <IconUp
      data-name="Layer 1"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
  </div>
</th>
`;

exports[`WorklistDataGrid render column header cell with ascending sort and error 1`] = `
<th
  aria-sort="ascending"
  className="column-header selectable"
  key="Column-0"
  role="columnheader"
  scope="col"
  style={
    Object {
      "height": "150px",
      "width": "100px",
    }
  }
  tabIndex="-1"
>
  <div
    className="header-container"
  >
    <IconError
      a11yLabel="Terra.worklistDataGrid.columnError"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
    <span
      role="button"
    >
       Vitals
    </span>
    <IconUp
      data-name="Layer 1"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
  </div>
</th>
`;

exports[`WorklistDataGrid render column header cell with descending sort 1`] = `
<th
  aria-sort="descending"
  className="column-header selectable"
  key="Column-0"
  role="columnheader"
  scope="col"
  style={
    Object {
      "height": "150px",
      "width": "100px",
    }
  }
  tabIndex="-1"
>
  <div
    className="header-container"
  >
    <span
      role="button"
    >
       Vitals
    </span>
    <IconDown
      data-name="Layer 1"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
  </div>
</th>
`;

exports[`WorklistDataGrid render column header cell with error 1`] = `
<th
  className="column-header selectable"
  key="Column-0"
  role="columnheader"
  scope="col"
  style={
    Object {
      "height": "150px",
      "width": "100px",
    }
  }
  tabIndex="-1"
>
  <div
    className="header-container"
  >
    <IconError
      a11yLabel="Terra.worklistDataGrid.columnError"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
    <span
      role="button"
    >
       Vitals
    </span>
  </div>
</th>
`;

exports[`WorklistDataGrid render column header cell with onColumnSelect callback 1`] = `
<th
  aria-sort="ascending"
  className="column-header selectable"
  key="Column-0"
  onClick={[Function]}
  role="columnheader"
  scope="col"
  style={
    Object {
      "height": "150px",
      "width": "100px",
    }
  }
  tabIndex="-1"
>
  <div
    className="header-container"
  >
    <IconError
      a11yLabel="Terra.worklistDataGrid.columnError"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
    <span
      role="button"
    >
       Vitals
    </span>
    <IconUp
      data-name="Layer 1"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
  </div>
</th>
`;

exports[`WorklistDataGrid render column header cell with onColumnSelect callback but not selectable 1`] = `
<th
  aria-sort="ascending"
  className="column-header"
  key="Column-0"
  role="columnheader"
  scope="col"
  style={
    Object {
      "height": "150px",
      "width": "100px",
    }
  }
  tabIndex="-1"
>
  <div
    className="header-container"
  >
    <IconError
      a11yLabel="Terra.worklistDataGrid.columnError"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
    <span
      role="button"
    >
       Vitals
    </span>
    <IconUp
      data-name="Layer 1"
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
  </div>
</th>
`;

exports[`WorklistDataGrid render default column header cell 1`] = `
<th
  className="column-header selectable"
  key="Column-0"
  role="columnheader"
  scope="col"
  style={
    Object {
      "height": "150px",
      "width": "100px",
    }
  }
  tabIndex="-1"
>
  <div
    className="header-container"
  >
    <span
      role="button"
    >
       Vitals
    </span>
  </div>
</th>
`;
